--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         
         const PROFILE = {
             name: "Danilo Laurindo",
-            role: "Product Manager, Digital Sales",
+            role: "Transformation Leader, Product Manager and Agile Coach",
             id: "PM-2026-EXP",
-            email: "danilo@example.com", // Placeholder
+            email: "danilo.laurindo@if.fi", // Placeholder
             status: "Open to Work"
         };
 
@@ -64,29 +64,29 @@
             { 
                 id: 1, 
                 title: "Product Manager", 
-                company: "Digital Sales", 
+                company: "If - Entice", 
                 date: "Current", 
                 amount: "+Value", 
                 type: "claim",
-                details: "Leading the transition from acquisition-focused strategies to retention-based value models. Implementing 'OneIf' operating model." 
+                details: "Leading the digital acquisition strategy, with ruthless focus and prioritization." 
             },
             { 
                 id: 2, 
-                title: "Digital Unit Lead", 
-                company: "IBM", 
-                date: "2018-2022", 
-                amount: "+Growth", 
+                title: "Agile Coach", 
+                company: "If", 
+                date: "2022-2025", 
+                amount: "+Speed", 
                 type: "claim",
-                details: "Managed a Digital Transformation Unit with 10 direct reports across Europe. Delivered 3 major enterprise platforms." 
+                details: "Co-authored Strategic Alignment and PO/PM skills development." 
             },
             { 
                 id: 3, 
-                title: "Agile Coach", 
-                company: "Consultancy", 
-                date: "2015-2018", 
-                amount: "+Speed", 
+                title: "Digital Transformation Lead", 
+                company: "IBM", 
+                date: "2020-2022", 
+                amount: "+Growth", 
                 type: "claim",
-                details: "Coached 5 squads on Scrum/Kanban methodologies. Increased delivery velocity by 40% in first 6 months." 
+                details: "Managed a Digital Transformation Unit with 10 direct reports across Europe. Delivered major enterprise transformation outcomes." 
             },
         ];
 
@@ -98,7 +98,7 @@
                 coverage: "100%",
                 icon: "TrendingUp",
                 color: "blue",
-                details: "I don't just build features; I build revenue engines. Deep experience in acquisition funnels, conversion optimization, and CLV modeling."
+                details: "I don't just build features; I build revenue engines. Expertise in acquisition funnels and conversion optimization."
             },
             {
                 id: "POL-02",
@@ -107,7 +107,7 @@
                 coverage: "Full Stack",
                 icon: "Zap",
                 color: "amber",
-                details: "I speak 'Dev' and 'Biz'. Capable of translating complex commercial requirements into actionable technical user stories."
+                details: "I speak 'Dev' and 'Biz'. Capable of translating complex commercial requirements into goals for the tribe."
             },
             {
                 id: "POL-03",
@@ -236,7 +236,7 @@
                         DL
                     </div>
                     <div>
-                        <p className="text-blue-200 text-xs font-medium uppercase tracking-wider">Welcome Recruiter</p>
+                        <p className="text-blue-200 text-xs font-medium uppercase tracking-wider">Welcome Tiia</p>
                         <h1 className="text-xl font-bold">Reviewing Policy</h1>
                     </div>
                 </div>
@@ -370,9 +370,9 @@
 
                 <div className="relative border-l-2 border-blue-100 ml-3 space-y-8 py-1">
                     {[
-                        { day: "Day 0-30", title: "Alignment", desc: "Sync Sales & Service roadmaps. 1-on-1s with Chapter Leads.", status: "Pending" },
-                        { day: "Day 31-60", title: "Assessment", desc: "Audit AI & Security roadmap. Assess 'Say/Do' ratio of squads.", status: "Locked" },
-                        { day: "Day 61-90", title: "Acceleration", desc: "Deploy Outcome-based OKRs. Present 'Service 2026' vision.", status: "Locked" }
+                        { day: "Day 0-30", title: "Alignment", desc: "Listen, learn, observe. 1-on-1s, lunch dates, stakeholder anchoring.", status: "Pending" },
+                        { day: "Day 31-60", title: "Assessment", desc: "Understand where we are and where we plan to go. Scrutinize priorities.", status: "Locked" },
+                        { day: "Day 61-90", title: "Acceleration", desc: "Bridge to our CX Vision and Commercial Digital Strategy. Cross-sales, digital efficiency, leverage AI.", status: "Locked" }
                     ].map((step, idx) => (
                         <div key={idx} className="relative pl-8 group">
                             <div className={`absolute -left-[9px] top-0 w-4 h-4 rounded-full border-4 border-white shadow-sm transition-colors ${
@@ -406,7 +406,7 @@
                     <div className="w-full grid grid-cols-2 gap-3">
                         <div className="bg-slate-50 p-3 rounded-xl border border-slate-100">
                             <p className="text-[10px] text-slate-400 uppercase font-bold">Experience</p>
-                            <p className="text-sm font-semibold text-slate-700">8+ Years</p>
+                            <p className="text-sm font-semibold text-slate-700">15+ Years</p>
                         </div>
                         <div className="bg-slate-50 p-3 rounded-xl border border-slate-100">
                             <p className="text-[10px] text-slate-400 uppercase font-bold">Status</p>
